[package]
name = "dll"
version = "0.1.0"
authors = ["Kimbatt <kimbatt16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objparser = { path = "../objparser/", version = "0.1.0" }


[lib]
name = "dll"
path = "src/lib.rs"
crate-type = ["cdylib"]
