[package]
name = "dll"
version = "0.1.0"
authors = ["Kimbatt <kimbatt16@gmail.com>"]
edition = "2018"

[dependencies]
objparser = { path = "../objparser/", version = "0.1.0" }
wasm-bindgen = "0.2.70"

[lib]
name = "dll"
path = "src/lib.rs"
crate-type = ["cdylib"]


[profile.release]
#debug = true
opt-level = 3
codegen-units = 1
lto = "fat"

[features]
default = ["wasm"]
wasm = []
