[package]
name = "objparser"
version = "0.1.0"
authors = ["Kimbatt <kimbatt16@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.9"
bitflags = "1.2.1"
lexical = "5.2.0"

[lib]
name = "objparser"
path = "src/lib.rs"

[[bin]]
name = "testapp"
path = "src/test-app/main.rs"

[profile.release]
debug = true
