[package]
name = "objparser"
version = "0.1.0"
authors = ["Kimbatt <kimbatt16@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.2.1"
lexical = "5.2.0"
fast-float = "0.2.0"

[lib]
name = "objparser"
path = "src/lib.rs"

[[bin]]
name = "testapp"
path = "src/test-app/main.rs"

[profile.release]
debug = true
opt-level = 3
codegen-units = 1
lto = "fat"
